--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "swaycons"
+path = "src/main.rs"
 
 [dependencies]
-swayipc = "3.0.0"
+config = "0.11.0"
 regex = "1.5.4"
+swayipc = "3.0.0"
+xdg = "2.4.0"
