Add some rudimentary logic for multiple patterns matching a title
- also update default config

--- a/src/config.toml
+++ b/src/config.toml
@@ -18,36 +18,42 @@ google-chrome = { icon = "", color = "#4285f4" }
 neovide = { icon = "", color = "#8fff6d" }
 nvim-qt = { icon = "", color = "#8fff6d" }
 zoom = { icon = "", color = "#2d8cff" }
+1Password = { icon = "", color = "#0572ec" }
 
 [title]
-"192.168.0.1" = { icon = "直", color = "#004cb6" }
-"192.168.86.1" = { icon = "直", color = "#004cb6" }
-"amazon.com" = { icon = "", color = "#ff9900" }
-"atlassian.net" = { icon = "", color = "#0052cc" }
-"bitbucket.org" = { icon = "", color = "#0052cc" }
-"calendar.google.com" = { icon = "", color = "#4285f4" }
-"deezer.com" = { icon = "", color = "#ef5466" }
+"192\\.168\\.0\\.1" = { icon = "直", color = "#004cb6" }
+"192\\.168\\.86\\.1" = { icon = "直", color = "#004cb6" }
+"1password\\.com" = { icon = "", color = "#0572ec" }
+"amazon\\.com" = { icon = "", color = "#ff9900" }
+"atlassian\\.net" = { icon = "", color = "#0052cc" }
+"bitbucket\\.org" = { icon = "", color = "#0052cc" }
+"calendar\\.google\\.com" = { icon = "", color = "#4285f4" }
+"cloud\\.google.com" = { icon = "", color = "#4285f4" }
+"deezer\\.com" = { icon = "", color = "#ef5466" }
+"developers\\.google\\.com" = { icon = "", color = "#4285f4" }
 "docs.rs" = { icon = "", color = "#FFFFFF" }
-"drive.google.com" = { icon = "", color = "#4285f4" }
-"duckduckgo.com" = { icon = "", color = "#de5833" }
-"facebook.com" = { icon = "", color = "#1877f2" }
-"fastmail.com" = { icon = "﫯", color = "#1565c0" }
-"feedbin.com" = { icon = "", color = "#FFFFFF" }
-"github.com" = { icon = "", color = "#FFFFFF" }
-"last.fm" = { icon = "", color = "#ba0000" }
-"mail.google.com" = { icon = "", color = "#ad1f1c" }
-"meet.google.com" = { icon = "", color = "#4285f4" }
-"messages.google.com" = { icon = "", color = "#4285f4" }
-"nerdfonts.com" = { icon = "", color = "#ffce3e" }
-"rust-lang.org" = { icon = "", color = "#FFFFFF" }
-"slack.com" = { icon = "聆", color = "#2eb67d" }
-"spotify.com" = { icon = "阮", color = "#1ed760" }
-"stackoverflow.com" = { icon = "", color = "#f48225" }
-"startpage.com" = { icon = "", color = "#6573ff" }
-"travis-ci.com" = { icon = "", color = "#cd324a" }
-"twitter.com" = { icon = "", color = "#1d9bf0" }
-"ui.com" = { icon = "直", color = "#004cb6" }
-"www.google.com" = { icon = "", color = "#4285f4" }
-"zoom.us" = { icon = "", color = "#2d8cff" }
+"drive\\.google\\.com" = { icon = "", color = "#4285f4" }
+"duckduckgo\\.com" = { icon = "", color = "#de5833" }
+"facebook\\.com" = { icon = "", color = "#1877f2" }
+"fastmail\\.com" = { icon = "﫯", color = "#1565c0" }
+"feedbin\\.com" = { icon = "", color = "#FFFFFF" }
+"github\\.com" = { icon = "", color = "#FFFFFF" }
+"keep\\.google\\.com" = { icon = "ﯚ", color = "#fbbc04" }
+"last\\.fm" = { icon = "", color = "#ba0000" }
+"mail\\.google\\.com" = { icon = "", color = "#ad1f1c" }
+"meet\\.google\\.com" = { icon = "", color = "#4285f4" }
+"messages\\.google\\.com" = { icon = "", color = "#4285f4" }
+"nerdfonts\\.com" = { icon = "", color = "#ffce3e" }
+"rust-lang\\.org" = { icon = "", color = "#FFFFFF" }
+"slack\\.com" = { icon = "聆", color = "#2eb67d" }
+"spotify\\.com" = { icon = "阮", color = "#1ed760" }
+"stackoverflow\\.com" = { icon = "", color = "#f48225" }
+"startpage\\.com" = { icon = "", color = "#6573ff" }
+"travis-ci\\.com" = { icon = "", color = "#cd324a" }
+"twitter\\.com" = { icon = "", color = "#1d9bf0" }
+"ui\\.com" = { icon = "直", color = "#004cb6" }
+"google\\.com/maps" = { icon = "﫴", color = "#4caf50" }
+"google\\.com" = { icon = "", color = "#4285f4" }
+"zoom\\.us" = { icon = "", color = "#2d8cff" }
 vim = { app_id = ["foot", "Alacritty"], icon = "", color = "#8fff6d" }
 nnn = { app_id = ["foot", "Alacritty"], icon = "", color = "#FFFFFF" }
